# rdms-rest-api/src/main/java/ua/knu/csc/it/rdms/controller/TableController.java
@@ -4,10 +4,16 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import ua.knu.csc.it.rdms.api.TablesApi;
+import ua.knu.csc.it.rdms.domain.Row;
 import ua.knu.csc.it.rdms.domain.RowFilter;
 import ua.knu.csc.it.rdms.domain.RowModifier;
+import ua.knu.csc.it.rdms.domain.SortDirection;
+import ua.knu.csc.it.rdms.domain.Sorting;
+import ua.knu.csc.it.rdms.mapper.RowMapper;
 import ua.knu.csc.it.rdms.mapper.TableMapper;
 import ua.knu.csc.it.rdms.model.CreateTableDto;
+import ua.knu.csc.it.rdms.model.RowsDto;
+import ua.knu.csc.it.rdms.model.SortingDto;
 import ua.knu.csc.it.rdms.model.TableDto;
 import ua.knu.csc.it.rdms.model.TablesDto;
 import ua.knu.csc.it.rdms.model.UpdateDto;
@@ -67,6 +73,16 @@ public class TableController implements TablesApi {
             .map(TableMapper::toDto)
             .toList();
         return ResponseEntity.ok(new TablesDto().tables(tables));
+    }
+
+    @Override
+    public ResponseEntity<RowsDto> select(String databaseName, String tableName, SortingDto sorting) {
+        SortDirection sortDirection = SortDirection.valueOf(sorting.getSortingOrder().getValue());
+        Sorting sortingStrategy = new Sorting(sorting.getSortingColumn(), sortDirection);
+        List<Row> rows = databaseManager.selectAllRows(databaseName, tableName, sortingStrategy);
+
+        RowsDto rowsDto = RowMapper.toDtos(rows);
+        return ResponseEntity.ok(rowsDto);
     }
 
     @Override
